# tools-impact-engine-evaluate

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  DESIGN.md  NEXT_STEPS.md  PLAN.md  README.md  __init__.py  environment.yml  main.py  pyproject.toml
.claude/docs/: plan-agentic-review.md
.claude/skills/: audit-ecosystem  doc-sync  review-docs  review-plan  scaffold-package  sync-agentic-support  sync-package-setup
.claude/subagents/: code-reviewer.md  design-reviewer.md  doc-generator.md  ecosystem-reviewer.md  test-writer.md
.github/workflows/: docs.yaml
assistants/: __init__.py
assistants/general/: __init__.py  agent.py  general_assistant.py  tools.py
captains-logger/: agent_base_example.py  personal_assistant.py
core/: __init__.py  base.py
docs/source/: GUIDELINES.md  conf.py  index.md
docs/source/guides/: api_reference.rst  configuration.md  design.md  usage.md
docs/source/tutorials/: demo_agentic_review.ipynb  demo_deterministic_scoring.ipynb  demo_ollama_review.ipynb  notebook_support.py  review_config.yaml
docs/source/tutorials/llm/: demo_ollama_review.ipynb
docs/source/tutorials/rct_job/: impact_results.json  manifest.json  regression_output.json  review_result.json
framework/: strands_agent.py
impact_engine_evaluate/: __init__.py  adapter.py  api.py  config.py  job_reader.py  models.py  scorer.py
impact_engine_evaluate/review/: __init__.py  api.py  engine.py  knowledge_registry.py  manifest.py  models.py  prompt_registry.py  review_adapter.py
impact_engine_evaluate/review/backends/: __init__.py  anthropic_backend.py  base.py  deterministic.py  litellm_backend.py  openai_backend.py
impact_engine_evaluate/review/knowledge/: __init__.py  base.py  static.py
impact_engine_evaluate/review/methods/: __init__.py  base.py
impact_engine_evaluate/review/methods/experiment/: __init__.py  reviewer.py
impact_engine_evaluate/review/methods/experiment/knowledge/: design.md  diagnostics.md  pitfalls.md
impact_engine_evaluate/review/methods/experiment/prompts/: experiment_review.yaml
impact_engine_evaluate/review/methods/quasi_experimental/: __init__.py  reviewer.py
impact_engine_evaluate/review/methods/quasi_experimental/knowledge/: overview.md
impact_engine_evaluate/review/methods/quasi_experimental/prompts/: quasi_experimental_review.yaml
impact_engine_evaluate/review/prompts/: __init__.py  registry.py  renderer.py
impact_engine_evaluate/review/prompts/templates/: data_quality.yaml  study_design.yaml
impact_engine_evaluate/score/: __init__.py  scorer.py
impact_engine_evaluate/tests/: conftest.py  test_adapter.py  test_backends.py  test_engine.py  test_knowledge.py
prompts/: arrow.md
tests/: __init__.py  conftest.py  test_adapter.py  test_backends.py  test_config.py  test_engine.py  test_experiment_review.py  test_job_reader.py  test_knowledge_registry.py  test_manifest.py  test_method_registry.py  test_models.py  test_prompt_registry.py  test_prompts.py  test_review_adapter.py  test_review_api.py  test_scorer.py
tests/integration/: __init__.py
