[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "impact-engine-evaluate"
version = "0.1.0"
description = "Confidence scoring and agentic artifact review for the impact engine pipeline."
authors = [
  { name = "eisenhauerIO", email = "info@eisenhauer.io" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pre-commit"]
review = ["jinja2>=3.1"]
anthropic = ["jinja2>=3.1", "anthropic>=0.40"]
openai = ["jinja2>=3.1", "openai>=1.50"]
litellm = ["jinja2>=3.1", "litellm>=1.50"]
all = ["jinja2>=3.1", "anthropic>=0.40", "openai>=1.50", "litellm>=1.50"]

[tool.hatch.build.targets.wheel]
packages = ["impact_engine_evaluate"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ -v"
lint = "ruff check . && ruff format --check ."
format = "ruff format ."

[tool.hatch.envs.docs]
dependencies = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=1.3.0",
  "myst-parser>=2.0.0",
  "linkify-it-py>=2.0.0",
  "sphinx-autodoc-typehints>=1.12.0",
  "nbsphinx>=0.9.0",
  "ipykernel>=6.0.0",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs/source docs/build/html"

[tool.ruff]
extend-exclude = ["_external", "docs/build"]
line-length = 120

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"**/tests/**" = ["D"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
